taskmaster-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: taskmaster
spec:
  replicas: 2
  selector:
    matchLabels:
      app: taskmaster
  template:
    metadata:
      labels:
        app: taskmaster
    spec:
      containers:
      - name: taskmaster
        image: nelsa/taskmaster:latest
        ports:
        - containerPort: 3002
