taskmaster-loadbalancer.yml
apiVersion: v1
kind: Service
metadata:
  name: taskmaster-loadbalancer
spec:
  selector:
    app: taskmaster
  type: LoadBalancer
  ports:
    - protocol: TCP
      port: 3001
      targetPort: 3001
