taskmaster-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: taskmaster
  namespace: default
spec:
  selector:
    app: taskmaster
  ports:
    - protocol: TCP
      port: 3002
      targetPort: 3002
  type: ClusterIP
