taskmaster-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: taskmaster-ingress
spec:
  rules:
  - host: taskmaster.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: taskmaster
            port:
              number: 3001
